<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              >
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_name"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/name_editText"
                android:layout_gravity="center_vertical"
                android:imeOptions="actionNext"
                android:layout_weight="1"
                android:singleLine="false"
                android:textSize="20sp"
                android:gravity="right"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
                  android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"/>
        <EditText android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:id="@+id/value_editText"
                  android:layout_gravity="center_vertical"
                  android:imeOptions="actionDone"
                  android:layout_weight="1"
                  android:singleLine="false"
                  android:inputType="numberDecimal|number"
                  android:digits="0123456789."
                  android:textSize="20sp"
                  android:gravity="right"
                  />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
                  android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/paid_by"
                  android:textSize="20sp"
                  android:layout_gravity="center_vertical"/>
        <Spinner
                android:id="@+id/paid_by_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
                  android:layout_height="wrap_content">
        <Button
                android:id="@+id/update_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_date"
                android:layout_gravity="center_vertical"/>
        <TextView android:id="@+id/date_field"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="default"
                  android:textSize="20sp"
                  android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <Button
            android:id="@+id/select_participants"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/participants_selection" />
    <TextView android:id="@+id/displayed_participants"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text=""
              android:textSize="20sp"
              android:layout_gravity="center_vertical"
              android:imeOptions="actionDone"/>

    <Button
            android:id="@+id/select_categories"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/categories_selection" />
    <TextView android:id="@+id/displayed_categories"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text=""
              android:textSize="20sp"
              android:layout_gravity="center_vertical"
              android:imeOptions="actionDone"/>
</LinearLayout>
